Allow to restore closed tabs (fix #708)

--- a/gui/src/mainwindow.ui
+++ b/gui/src/mainwindow.ui
@@ -436,6 +436,7 @@ QTextEdit {
     <addaction name="actionAddtab"/>
     <addaction name="actionAddpooltab"/>
     <addaction name="actionClosetab"/>
+    <addaction name="actionRestoreLastClosedTab"/>
     <addaction name="separator"/>
     <addaction name="actionFolder"/>
     <addaction name="actionSettingsFolder"/>
@@ -1093,6 +1094,21 @@ QTextEdit {
     <string>Project GitHub</string>
    </property>
   </action>
+  <action name="actionRestoreLastClosedTab">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../../resources/resources.qrc">
+     <normaloff>:/images/icons/tab-arrow.png</normaloff>:/images/icons/tab-arrow.png</iconset>
+   </property>
+   <property name="text">
+    <string>Restore last closed tab</string>
+   </property>
+   <property name="shortcut">
+    <string notr="true">Ctrl+Shift+T</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -1121,6 +1137,9 @@ QTextEdit {
   <tabstop>buttonSaveSettings</tabstop>
  </tabstops>
  <resources>
+  <include location="../../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
   <include location="../../resources/resources.qrc"/>
  </resources>
  <connections>
@@ -1668,6 +1687,22 @@ QTextEdit {
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionRestoreLastClosedTab</sender>
+   <signal>triggered()</signal>
+   <receiver>mainWindow</receiver>
+   <slot>restoreLastClosedTab()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>270</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>help()</slot>
@@ -1713,5 +1748,6 @@ QTextEdit {
   <slot>aboutReportBug()</slot>
   <slot>renameExisting()</slot>
   <slot>aboutGithub()</slot>
+  <slot>restoreLastClosedTab()</slot>
  </slots>
 </ui>
