Add waifu2x image search (issue #754)

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -50,6 +50,7 @@
         <file>images/reverse-search/iqdb.png</file>
         <file>images/reverse-search/tineye.png</file>
         <file>images/reverse-search/google.png</file>
+        <file>images/reverse-search/waifu2x.png</file>
         <file>images/reverse-search/yandex.png</file>
         <file>images/play-overlay.png</file>
         <file>images/status/downloading.png</file>
