Add icon for the search MD5 context menu action

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -37,6 +37,7 @@
         <file>images/icons/folder-document.png</file>
         <file>images/icons/folder-images.png</file>
         <file>images/icons/gear.png</file>
+        <file>images/icons/hash.png</file>
         <file>images/icons/qt.png</file>
         <file>images/icons/settings.png</file>
         <file>images/icons/tab-minus.png</file>
