Add 'Save as' context menu action (fix #861)

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -13,6 +13,7 @@
         <file>images/icons/favorite.png</file>
         <file>images/icons/remove.png</file>
         <file>images/icons/save.png</file>
+        <file>images/icons/save-as.png</file>
         <file>images/icons/window.png</file>
         <file>images/icons/book.png</file>
         <file>images/icons/update.png</file>
