--- a/gui/src/settings/optionswindow.ui
+++ b/gui/src/settings/optionswindow.ui
@@ -14,7 +14,7 @@
    <string>Options</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../../../CrashReporter/resources.qrc">
+   <iconset resource="../../../resources/resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
@@ -1027,7 +1027,7 @@
            <item row="0" column="1">
             <widget class="QLineEdit" name="lineTextfileSuffix">
              <property name="text">
-              <string>.txt</string>
+              <string notr="true">.txt</string>
              </property>
             </widget>
            </item>
@@ -2939,7 +2939,10 @@
   <tabstop>comboSources</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../CrashReporter/resources.qrc"/>
+  <include location="../../../resources/resources.qrc"/>
+  <include location="../../../resources/resources.qrc"/>
+  <include location="../../../resources/resources.qrc"/>
+  <include location="../../../resources/resources.qrc"/>
  </resources>
  <connections>
   <connection>
