Allow to reorder web services (issue #920)

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -10,6 +10,8 @@
         <file>images/ratings/safe.png</file>
         <file>images/ratings/none.png</file>
         <file>images/icons/add.png</file>
+        <file>images/icons/arrow-down.png</file>
+        <file>images/icons/arrow-up.png</file>
         <file>images/icons/favorite.png</file>
         <file>images/icons/remove.png</file>
         <file>images/icons/save.png</file>
