--- a/gui/src/tabs/favorites-tab.ui
+++ b/gui/src/tabs/favorites-tab.ui
@@ -303,12 +303,12 @@
            </widget>
           </item>
           <item>
-           <widget class="QScrollArea" name="scrollArea">
+           <widget class="VerticalScrollArea" name="scrollArea">
             <property name="styleSheet">
              <string notr="true">QAbstractScrollArea,
 QWidget#scrollAreaWidgetContents {
 	background-color: transparent;
-} </string>
+}</string>
             </property>
             <property name="frameShape">
              <enum>QFrame::NoFrame</enum>
@@ -322,6 +322,9 @@ QWidget#scrollAreaWidgetContents {
             <property name="horizontalScrollBarPolicy">
              <enum>Qt::ScrollBarAlwaysOff</enum>
             </property>
+            <property name="sizeAdjustPolicy">
+             <enum>QAbstractScrollArea::AdjustToContents</enum>
+            </property>
             <property name="widgetResizable">
              <bool>true</bool>
             </property>
@@ -331,11 +334,11 @@ QWidget#scrollAreaWidgetContents {
                <x>0</x>
                <y>0</y>
                <width>780</width>
-               <height>249</height>
+               <height>188</height>
               </rect>
              </property>
              <property name="sizePolicy">
-              <sizepolicy hsizetype="Ignored" vsizetype="Preferred">
+              <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
@@ -442,7 +445,7 @@ QWidget#scrollAreaWidgetContents {
             <x>0</x>
             <y>0</y>
             <width>780</width>
-            <height>69</height>
+            <height>130</height>
            </rect>
           </property>
           <property name="styleSheet">
@@ -677,9 +680,6 @@ QWidget#scrollAreaWidgetContents {
   <tabstop>pushButton_2</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../resources/resources.qrc"/>
-  <include location="../../../resources/resources.qrc"/>
-  <include location="../../../resources/resources.qrc"/>
   <include location="../../../resources/resources.qrc"/>
  </resources>
  <connections>
